--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/theme/theme",
     "pages/category/category",
     "pages/cart/cart",
-    "pages/my/my"
+    "pages/my/my",
+    "pages/order/order"
   ],
   "window": {
     "backgroundTextStyle": "light",
